Refactor middleware classes to implement WebMiddleware interface
- Updated SessionMiddleware, XssProtectionMiddleware, and FormMiddleware to implement WebMiddleware instead of AbstractWebMiddleware.
- Changed TraceMiddleware to extend DecoratorMiddleware instead of Middleware.
- Introduced WebMiddleware interface to standardize web-layer middleware handling.
- Updated MemoryStore to manage session expiration with a scheduled purge task.
- Refactored TokenBackend to simplify authorization header parsing.
- Adjusted various middleware tests to remove generic type parameters for cleaner code.
- Removed AbstractWebMiddlewareTest as it is no longer needed.
- Updated dependencies in pom.xml to reflect changes in the project structure.